--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,9 @@ panic = 'abort'
 [dependencies]
 winapi = { version = "0.3", features = [ "tlhelp32", "handleapi" ] }
 proclist = "0.9"
-process-memory = "0.3.0"
-reqwest = { version = "0.10", features = ["blocking", "json"] }
+process-memory = "0.3"
+ureq = { version = "*", features = ["json"] }
+serde = { version = "1.0.101", features = ["derive"] }
 
 [package.metadata.winres]
 OriginalFilename = "DisZero.exe"
